feat(ui): add tab navigation and detached window support
Added a tab-based interface with three sections: Exploit, Detection, and Fingerprint. Implemented a detached window mode with singleton protection using chrome.storage.local. Added copy-to-clipboard functionality for output. Improved layout with flexbox and responsive design. Enhanced debugging with raw base64 output display. Updated manifest files to include storage permission for detached window tracking.

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "permissions": [
     "activeTab",
     "scripting",
+    "storage",
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess"
   ],
