--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -14,6 +14,7 @@
   "permissions": [
     "activeTab",
     "scripting",
+    "storage",
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess"
   ],
